Fix breakpoint: set $large to 800px to avoid overlap with $medium

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -118,7 +118,7 @@
    $small                      : 600px !default;
    $medium                     : 768px !default;
    $medium-wide                : 900px !default;
-   $large                      : 768px !default;
+   $large                      : 800px !default;
    $x-large                    : 1280px !default;
    
    /*
